--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             margin: 0 auto;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0 0 0 / 10%);
         }
         .form-section {
             font-family: 'Montserrat', sans-serif;
@@ -200,7 +200,7 @@
     <div class="container">
       <div class="form-section">
         <h1>Generador de firmas<br>
-          Correo Dulmatesa v4</h1>
+          Correo Dulmatesa v6</h1>
         Bienvenid@ al generador de firmas para correo de Dulmatesa. Para generar
         tu firma, selecciona tu nombre y pulsa el botón verde "Copiar firma al
         portapapeles".<br>
@@ -606,7 +606,7 @@
                 case 'Iván Camacho':               
                     positionValue = 'Encargado Producción';
                     oficina = 'Sede Puente Genil';
-                    correo = 'ivan.camacho@dulmatesa.s';
+                    correo = 'ivan.camacho@dulmatesa.es';
                     telefono = '962266191';
                     break;
                 case 'Javier Jaime':               
@@ -965,9 +965,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2">
-                        <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="10" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
-                    </td>
+                    <td colspan="2" height="10" style="font-size:1px; line-height:1px; mso-line-height-rule: exactly;">&nbsp;</td>
                 </tr>
                 <tr>
                     <td>
@@ -981,9 +979,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="2">
-                                    <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
-                                </td>
+                                <td colspan="2" height="2" style="font-size:1px; line-height:1px; mso-line-height-rule: exactly;">&nbsp;</td>
                             </tr>
                             <tr>
                                 <td width="20" style="vertical-align: middle; padding-right: 6px;">
@@ -994,9 +990,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="2">
-                                    <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
-                                </td>
+                                <td colspan="2" height="2" style="font-size:1px; line-height:1px; mso-line-height-rule: exactly;">&nbsp;</td>
                             </tr>
                             <tr>
                                 <td width="20" style="vertical-align: middle; padding-right: 7px;">
@@ -1007,9 +1001,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="2">
-                                    <img src="https://www.dulmatesa.es/img/reciclado.png" width="1" height="2" style="display:block; border:0; margin:0; padding:0; line-height:1px;" alt="">
-                                </td>
+                                <td colspan="2" height="2" style="font-size:1px; line-height:1px; mso-line-height-rule: exactly;">&nbsp;</td>
                             </tr>
                             <tr>
                                 <td width="20" style="vertical-align: middle; padding-right: 5px;">
